Home Page QA feedback implemented

--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,12 @@ button {
   .features {
     background: none;
   }
+
+  .charges-container {
+    background: url("./images/bg-black-sm-screen.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
 }
 
 .carousel-container {
