--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
@@ -5,15 +9,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Catamaran", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
 html {
   font-size: 62.5%;
-  color: #191453;
+  color: #191453; 
 }
 
-.acive-nav{
+.active-nav{
   background-color: blue;
   color: white;
   border-radius: 15px;
@@ -109,9 +112,6 @@ button {
   }
 }
 
-.text-poppins {
-  font-family: "Poppins", sans-serif;
-}
 .display-block{
   display: block !important;
 }
@@ -152,7 +152,18 @@ select {
       -webkit-transform: rotate(359deg);
   }
 }
+/* Radio Button */
+.radio-style{
+  border:2px solid white;
+  box-shadow:0 0 0 1px #191453;
+  appearance:none;
+  border-radius:5px;
+  width:12px;
+  height:12px;
+  background-color:#fff;
+  transition:all ease-in 0.2s;
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+}
+.radio-style:checked{
+  background-color:#191453;
+}
