--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -12,8 +12,8 @@
   font-family: "Poppins", sans-serif;
 }
 html {
-  font-size: 62.5%;
-  color: #191453; 
+  /* font-size: 62.5%; */
+  color: #191453;
 }
 
 .active-nav{
@@ -24,11 +24,11 @@ html {
   padding: 9px 14px;
 
 }
-@media only screen and (max-width: 26.5626em) {
+/* @media only screen and (max-width: 26.5626em) {
   html {
     font-size: 50%;
   }
-}
+} */
 
 button {
   outline: none;
@@ -75,7 +75,7 @@ button {
 /* typing animation */
 .writeit {
   color: black;
-  /* font-size: 3rem; */
+  font-size: 3rem;
   font-weight: 700;
   line-height: 38px !important;
   text-align: left;
@@ -106,11 +106,11 @@ button {
 
 /* ///////////////////////// STYLING APPLICABLE TO DASHBOARD ///////////////////////////////// */
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
-@media only screen and (max-width: 48em) {
+/* @media only screen and (max-width: 48em) {
   html.dashboard {
     font-size: 50%;
   }
-}
+} */
 
 .display-block{
   display: block !important;
