--- a/Assets/styles/styles.css
+++ b/Assets/styles/styles.css
@@ -12,10 +12,9 @@
   font-family: "Poppins", sans-serif;
 }
 html {
-  /* font-size: 62.5%; */
+  font-size: 62.5%;
   color: #191453;
 }
-
 .active-nav{
   background-color: blue;
   color: white;
@@ -24,11 +23,11 @@ html {
   padding: 9px 14px;
 
 }
-/* @media only screen and (max-width: 26.5626em) {
+@media only screen and (max-width: 26.5626em) {
   html {
     font-size: 50%;
   }
-} */
+}
 
 button {
   outline: none;
@@ -106,11 +105,11 @@ button {
 
 /* ///////////////////////// STYLING APPLICABLE TO DASHBOARD ///////////////////////////////// */
 /* /////////////////////////////////////////////////////////////////////////////////////////// */
-/* @media only screen and (max-width: 48em) {
+@media only screen and (max-width: 48em) {
   html.dashboard {
     font-size: 50%;
   }
-} */
+}
 
 .display-block{
   display: block !important;
