--- a/utils/css/styles.css
+++ b/utils/css/styles.css
@@ -252,13 +252,13 @@ select {
 .fc-header-toolbar {
   background-color: #fff;
   border-radius: 12px;
-  padding: 10px;
+  padding: 10px 2%;
 }
 
 .fc .fc-toolbar-title {
   font-size: 1rem;
   color: #191453;
-  font-weight: medium;
+  font-weight: 500;
   padding-left: 7px;
 }
 
@@ -293,6 +293,7 @@ select {
   color: #250ced;
   border: none;
   padding: 0;
+  text-transform: capitalize;
 }
 
 .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
@@ -301,7 +302,7 @@ select {
 
 .fc .fc-today-button:not(:disabled),
 .fc .fc-today-button:not(:disabled):active:focus {
-  font-style: capitalize;
+  text-transform: capitalize;
   background-color: transparent;
   color: #250ced;
   border: none;
@@ -319,13 +320,36 @@ select {
 }
 
 .fc-col-header:first-child {
-  border-radius: 8px 0 0 8px;
+  border-radius: 8px;
+}
+
+th.fc-timegrid-axis::before {
+  content: "Weekly";
+  position: relative;
+  top: 15%;
+  font-size: 12px;
+  color: #191453;
+  font-weight: 600;
+}
+
+.fc-col-header-cell {
+  border: none;
+}
+
+.fc th {
+  border: none;
+}
+
+.fc-theme-standard td:last-child {
+  border-right: none;
+  border-bottom: none;
 }
 
 .fc-col-header-cell-cushion {
   font-size: 12px;
   color: #5a5881;
   font-weight: normal;
+  padding: 10px !important;
 }
 
 /* Making calendar day links non-linkable */
@@ -333,15 +357,79 @@ select {
   pointer-events: none;
 }
 
-/* calendar time styling */
-.fc-timegrid-slot-label-cushion {
-  font-size: 11px;
-  padding: 0;
-}
-
 .fc .fc-view-harness {
   height: 90vh !important;
   border: none;
+  margin-top: -11px;
+}
+
+.fc-theme-standard .fc-scrollgrid {
+  border: none;
+}
+
+.fc-scrollgrid {
+  border-collapse: collapse;
+}
+
+.fc-scrollgrid table {
+  margin-bottom: 11px;
+}
+
+.fc-scroller-harness-liquid {
+  border-radius: 8px 0 0 8px;
+}
+
+.fc-timegrid-slot-minor {
+  display: none;
+}
+
+/* ///// calendar timeline styling */
+.fc-timegrid-slot-label {
+  background-color: #fff;
+  border: none !important;
+  color: #5a5881;
+  padding: 7px !important;
+}
+
+.fc-timegrid-slot-label-cushion {
+  font-size: 11px;
+  border-radius: 1rem;
+}
+
+.fc-theme-standard td {
+  border-left: none;
+}
+
+@media only screen and (max-width: 37.5em) {
+  .fc .fc-prev-button,
+  .fc .fc-next-button {
+    font-size: 8px;
+  }
+
+  .fc .fc-toolbar-title {
+    padding-left: 2px;
+    margin-bottom: 5px;
+    font-size: 15px;
+  }
+
+  .fc-direction-ltr .fc-toolbar > * > :not(:first-child) {
+    margin-left: 4px;
+  }
+
+  .fc .fc-toolbar {
+    /* flex-direction: column; */
+    align-items: flex-start;
+  }
+
+  .fc .fc-toolbar-title::after {
+    display: block;
+    margin-left: 0;
+  }
+
+  .fc .fc-today-button:disabled,
+  .fc .fc-today-button:not(:disabled) {
+    font-size: 14px;
+  }
 }
 
 @tailwind base;
